k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: prattle-backend
  template:
    metadata:
      labels:
        component: prattle-backend
    spec:
      containers:
        - name: prattle-backend
          image: naveenmraja/prattle-backend:1.4
          ports:
            - containerPort: 8080
