k8s/backend-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: prattle-backend
  ports:
    - port: 8080
      targetPort: 8080
